--- a/templates/datadump.html
+++ b/templates/datadump.html
@@ -1,63 +1,141 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Sniffer Dashboard</title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v3.0.6/css/line.css'>
   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='table.scss')}}">
+  <!link rel='stylesheet' href='https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css'>
+  <!link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.24/r-2.2.7/datatables.min.css"/>
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<aside class="sidebar position-fixed top-0 left-0 overflow-auto h-100 float-left" id="show-side-navigation1">
-  <i class="uil-bars close-asbackground-color: var(--sidebar-bg-color);ide d-md-none d-lg-none" data-close="show-side-navigation1"></i>
-  <div class="sidebar-header d-flex justify-content-center align-items-center px-3 py-4">
-    <div class="ms-2">
-      <h5 class="fs-6 mb-0">
-        <a class="text-decoration-none" href="#">Menu</a>
-      </h5>
-      <p class="mt-1 mb-0"></p>
-    </div>
-  </div>
-
-  <ul class="categories list-unstyled">
-    <li class="">
-      <i class="uil-chart-pie-alt"></i><a href="{{ url_for('display_dashboard') }}">Website Monitoring</a>
-    </li>
-    <li class="">
-      <i class="uil-folder"></i><a href="{{ url_for('display_datadump') }}">Packet Sniffer Dump</a>
-    </li>
-  </ul>
-</aside>
-
-<section id="wrapper">
-  <nav class="navbar navbar-expand-md">
-    <div class="container-fluid mx-2">
-      <div class="navbar-header">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggle-navbar" aria-controls="toggle-navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="uil-bars text-white"></i>
-        </button>
-        <a class="navbar-brand" href="#">admin<span class="main-color">kit</span></a>
-      </div>
-      <div class="collapse navbar-collapse" id="toggle-navbar">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i data-show="show-side-navigation1" class="uil-bars show-side-btn"></i>
-            </a>
-          </li>
-        </ul>
+  <!-- partial:index.partial.html -->
+  <aside class="sidebar position-fixed top-0 left-0 overflow-auto h-100 float-left" id="show-side-navigation1">
+    <i class="uil-bars close-asbackground-color: var(--sidebar-bg-color);ide d-md-none d-lg-none"
+      data-close="show-side-navigation1"></i>
+    <div class="sidebar-header d-flex justify-content-center align-items-center px-3 py-4">
+      <div class="ms-2">
+        <h5 class="fs-6 mb-0">
+          <a class="text-decoration-none" href="#">Menu</a>
+        </h5>
+        <p class="mt-1 mb-0"></p>
       </div>
     </div>
-  </nav>
 
-  <div class="p-4">    
+    <ul class="categories list-unstyled">
+      <li class="">
+        <i class="uil-chart-pie-alt"></i><a href="{{ url_for('display_dashboard') }}">Website Monitoring</a>
+      </li>
+      <li>
+        <i class="uil-folder"></i><a href="{{ url_for('display_datadump') }}">Packet Sniffer Dump</a>
+      </li class="">
+    </ul>
+  </aside>
+  <section id="wrapper">
+    <nav class="navbar navbar-expand-md">
+      <div class="container-fluid mx-2">
+        <div class="navbar-header">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggle-navbar"
+            aria-controls="toggle-navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="uil-bars text-white"></i>
+          </button>
+          <a class="navbar-brand" href="#">admin<span class="main-color">kit</span></a>
+        </div>
+        <div class="collapse navbar-collapse" id="toggle-navbar">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i data-show="show-side-navigation1" class="uil-bars show-side-btn"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-  </div>
-</section>
-<!-- partial -->
+    <div class="p-4">
+      <div class="welcome">
+        <div class="content rounded-3 p-3">
+          <h1 class="fs-3">View all data traffic</h1>
+          <p class="mb-0">Select the device for which you want to analyze</p>
+        </div>
+      </div>
+
+
+      <div class="welcome">
+        <div class="content rounded-3 p-3">
+          <form method="POST" action="{{ url_for('display_datadump') }}">
+            <select name="device-select" id="device-select" class="form-control w-100 border-0"
+              onchange="this.form.submit()">
+              {% if update == True %}
+              <option value={{device_name}} selected disabled hidden>{{device_name}}</option>
+              {% else %}
+              <option value="none" selected disabled hidden>List Devices</option>
+              {% endif %}
+              {% for data in tcpdump_data.distinct("device_name") %}
+              <option value={{data}}>{{data}}</option>
+              {% endfor %}
+            </select>
+          </form>
+        </div>
+      </div>
+      <section class="charts mt-4">
+        <div class="chart-container p-3">
+            {% if update == True %}
+              <table class="tablesaw tablesaw-stack" id="data_table" class="display">                
+                <thead>
+                  <tr>            
+                    <th>{{"Sr no."}}</th>   
+                    <th>{{"Device Name"}}</th>
+                    <th>{{"Ethernet Protocol"}}</th>
+                    <th>{{"Net Protocol"}}</th>
+                    <th>{{"Source IP"}}</th>
+                    <th>{{"Destination IP"}}</th>
+                    <th>{{"Source Port"}}</th>
+                    <th>{{"Destination IP"}}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for data in tcpdump_data.find({"device_name":device_name})%}
+                    <tr>
+                      <td>{{loop.index}}</td>
+                      <td>{{data["device_name"]}}</td>
+                      <td>{{data["ethproto"]}}</td>
+                      <td>{{data["netproto"]}}</td>
+                      <td>{{data["src_ip"]}}</td>
+                      <td>{{data["dest_ip"]}}</td>
+                      <td>{{data["src_port"]}}</td>
+                      <td>{{data["dest_port"]}}</td>
+                    </tr>
+                  {% endfor %}
+                 </tbody>
+              </table>
+              {% else %}
+              <h6 style="color: beige;">
+                No Device Selected
+              </h6>
+              {% endif %}
+        </div>
+      </section>
+      
+    </div>
+  </section>
+  <!-- partial -->
   <script src='https://cdn.jsdelivr.net/npm/chart.js'></script>
   <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
-  <script  src="{{url_for('static', filename='script.js')}}"></script>
+  <script src="{{url_for('static', filename='script.js')}}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src='https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js'></script>
+  
+  <script type="text/javascript">
+  $(document).ready(function () {
+    $('#data_table').DataTable();
+  });
+  </script>
 </body>
+
 </html>
