--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
         <i class="uil-chart-pie-alt"></i><a href="{{ url_for('display_dashboard') }}" onclick=window.location.replace("{{ url_for('display_dashboard') }}")>Website Monitoring</a>
       </li>
       <li>
-        <i class="uil-folder"></i><a href="{{ url_for('display_datadump') }}" onclick=window.location.replace("{{ url_for('display_datadump') }}")>Packet Sniffer Dump</a>
+        <i class="uil-folder"></i><a href="{{ url_for('display_datadump') }}" onclick=window.location.replace("{{ url_for('display_datadump') }}")>Packet Sniffer View</a>
       </li class="">
     </ul>
   </aside>
@@ -180,17 +180,6 @@
           </div>
         </div>
       </section>
-
-      <section class="charts mt-4">
-        <div class="chart-container p-3">
-          <h3 class="fs-6 mb-3">Chart title number three</h3>
-          <div style="height: 300px">
-            <h6 style="color: beige;">
-              No Device Selected
-            </h6>
-          </div>
-        </div>
-      </section>
     </div>
   </section>
   <!-- partial -->
@@ -200,42 +189,27 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script src="{{url_for('static', filename='script.js')}}"></script>
   <script>
-    var barData = {
-      labels: [
-        {% for item in labels %}
-    "{{ item }}",
-      {% endfor %}
-      ],
-
-    datasets: [
-      {
-        label: "Number of times visited",
-        data: [
-          {% for item in values %}
-             "{{ item }}",
-      {% endfor %}
-    ]
-        }
-      ],
-    backgroundColor: ["red", "green", "blue", "orange", "brown"],
-      borderColor: 'transparent',
-    }
-
-    var baroptions = {
-      legend: {
-        display: false,
-      }
-    }
-
-    var mychart = document.getElementById("bar_chart").getContext("2d");
-
-    steps = 10
-    max = {{ max }}
-
-    var barChart = new Chart(mychart, {
+    var ctx = document.getElementById("bar_chart").getContext('2d');
+    var myChart = new Chart(ctx, {
       type: 'bar',
-      data: barData,
-      options: baroptions,
+      data: {
+        labels: [
+        {% for item in labels %}
+        "{{ item }}",
+        {% endfor %}
+        ],
+        datasets: [{
+          data: [
+            {% for item in values %}
+            "{{ item }}",
+            {% endfor %}
+            ],
+          backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+        }]
+      },
+      options: {
+      legend: { display: false },
+    }
     });
 
   </script>
