--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The HTML5 Herald</title>
+  <title>Home Page</title>
   <meta name="description" content="Index page for our network monitoring app">
 </head>
 
