--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -225,6 +225,13 @@
       },
       options: {
       legend: { display: false },
+      scales: {
+        yAxes: [{
+            ticks: {
+                beginAtZero:true
+            }
+        }]
+    }
     }
     });
 
@@ -241,7 +248,7 @@
             "{{ item }}",
             {% endfor %}
             ],
-          backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+          backgroundColor: ["#e8c3b9","#c45850"],
         }]
       },
       options: {
