--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -228,7 +228,8 @@
       scales: {
         yAxes: [{
             ticks: {
-                beginAtZero:true
+                beginAtZero:true,
+                stepSize: 1
             }
         }]
     }
