--- a/templates/datadump.html
+++ b/templates/datadump.html
@@ -94,7 +94,7 @@
                     <th>{{"Source IP"}}</th>
                     <th>{{"Destination IP"}}</th>
                     <th>{{"Source Port"}}</th>
-                    <th>{{"Destination IP"}}</th>
+                    <th>{{"Destination Port"}}</th>
                   </tr>
                 </thead>
                 <tbody>
